# o2_re

./: couchdb.sh  main.py  main.sh  pyproject.toml  quick.sh
.cache/replit/nix/: env.json
.upm/: store.json
api/MOUS_azureManager/: MOUS_azureClasses.py  MOUS_azureFunctions.py  MOUS_azureManager.py
api/agora_token_gen/: agora_token_gen.py
api/azure_open_api/: agora_token_gen.py  azure_open_api.py
api/cmd_controller/: cmd_controller.py
api/users/: users.py
funcs/: database.py  logger.py  login.py  plugins.py  settings.py  shell.py  users.py  utilityTemplates.py
lib/azure_identity-1.12.0.dist-info/: RECORD
lib/azure_mgmt_compute-29.1.0.dist-info/: RECORD
lib/azure_mgmt_network-22.2.0.dist-info/: RECORD
lib/charset_normalizer-2.1.1.dist-info/: RECORD
lib/google_api_python_client-2.79.0.dist-info/: RECORD
plugins/CAT_azureManager/: CAT_azureManager.py  azureDesign.py  azureHTMLTemplates.py
plugins/MOUS_AzureManager/: MOUS_AzureManager.py
plugins/MOUS_azureManager/: MOUS_azureManager.py
plugins/adder/: adder.py
plugins/azureManager/: azureDesign.py  azureFuncs.py  azureHTMLTemplates.py  azureManager.py
plugins/iptables/: iptables.py
plugins/multiply/: multiply.py
plugins/openvpn/: openvpn.py
plugins/resources/: resources.py
plugins/shell_runner/: shell_runner.py
plugins/subtractor/: subtractor.py
plugins/tasks/: tasks.py
templates/: api_response.html  dashboard.html  index-old.html  index.html  login.html
