[tool.poetry]
name = "repl_python3_O2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
waitress = "^2.0.0"
db = "^0.1.1"
django-user = "^0.2.1"
Flask-Login = "^0.5.0"
oauthlib = "^3.1.1"
replit = "^3.2.4"
cryptography = "^36.0.1"
python-ntlm = "^1.1.0"
ca-certs-locater = "^1.0"
railroad = "^0.5.0"
Brotli = "^1.0.9"
grpcio-status = "^1.50.0"
pyu2f = "^0.1.5"
unicodedata2 = "^14.0.0"
aiohttp = "^3.8.3"
oauth2client = "^4.1.3"
psutil = "^5.9.3"
simplejson = "^3.17.6"
pymongo = "^4.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
